# advent_of_code_2025

./: README.md  pyproject.toml  pyproject.toml.orig
inputs/: day08.txt
src/aoc_cli/: cli.py
src/aoc_cli/days/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py
templates/: day_template.py.txt
tests/: __init__.py  conftest.py  test_day_05.py  test_examples.py
